Fix blockquote alignment

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -49,9 +49,9 @@ a:hover {
 
 blockquote,
 .news-toc {
-	width: calc(100% + 75px);
-    margin: 0 0 30px -30px;
-	padding: 30px;
+	width: calc(100% + 120px);
+    margin: 0 0 30px -60px;
+	padding: 30px 60px;
 	background-color: #f6f6f6;
 }
 
